# Harmonic-Knowledge-Law

./: 4_Pillars  Geometric_Intelligence_HKL.md  HKL Core and Equation.md  HKL_Geometric_Intelligence.md  HKL_Geometric_Intelligence_Updated.md  HKL_Water_Metric.md  IIFEvaluator.py  IIF_Evaluator.py  Law_of_We_Causal_Ethics.md  Libra_Model.py  Libra_Theory_of_Operarion  License.md  Neutrino_C.tex  Neutrino_Causality_Final.tex  Neutrino_Causality_Full_Formatted.tex  Neutrino_Causality_Hypothesis  Neutrino_Causality_LaTeX.tex  Neutrino_Primer  Prime_Torsion  README.md  SITEMAP.md  SLP_Published.md  START_HERE.md  Torque_Minima_10^8  torque_minima_n.py
CorePrinciples/: CausalEthicsAxis.md  Causal_Integrity_Axiom.md  Glossary.md  HKL_Geometric_Intelligence_Updated.md  HKL_Water_Metric.md  Law_of_We_Causal_Ethics.md  Law_of_We_Full.md  SLP_Published.md
Physics/: Neutrino_Causality_Hypothesis
Release/: 4_Pillars_Of_Consciousness.md  ARCHITECTURE.md  Absorbic_Effort_Framework.md  Causal_Ethics_Master_Symbol_Registry.md  HKL_Lyapunov.md  MANIFEST.md  README.md  Re-use SLP compression with Kanji.docx  The_Δ-Self_Concept.md  continuation_filter_concept_version.md  fallacy_of_large_scale_absorbic_effort_revised.md  Δ‑Self_2.md
Release/Delta-Self/: README.md  (+2 more)
Release/slp_gdelta_harness/: README.md  pyproject.toml  slp_gdelta_harnessapp.py  tool_schema.json
Release/slp_gdelta_harness/slp_gdelta_harness/: __init__.py  core.py
docs/: index.html
src/: GILN_AI.py  IIF_Evaluator.py  __init__.py  giln_network.py  human_node.py  test_giln_combined.py  test_giln_human.py
(+12 files in other folders)
